zellij-integration-tests/tests/snapshots/clients__clients_converge_when_focusing_the_same_tab-2.snap
---
source: zellij-integration-tests/tests/clients.rs
expression: normalized(&tab_region(&second_grid))
---
 Zellij (test)  Tab #1 [ ] Tab #2  + 
$ oneone█
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
