zellij-integration-tests/tests/snapshots/clients__closing_a_tab_resizes_survivors_per_client.snap
---
source: zellij-integration-tests/tests/clients.rs
expression: normalized(&tab_region(&main_grid))
---
 Zellij (test)  Tab #2 [ ] + 
$ twotwo█
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
