zellij-integration-tests/tests/snapshots/clients__detaching_one_client_reflows_the_remaining_client.snap
---
source: zellij-integration-tests/tests/clients.rs
expression: normalized(&tab_region(&main_grid))
---
 Zellij (test)  Tab #1  + 
$ oneone█
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
