zellij-integration-tests/tests/snapshots/clients__moving_a_pane_to_another_tab_recomputes_both_tabs_sizes.snap
---
source: zellij-integration-tests/tests/clients.rs
expression: normalized(&tab_region(&main_grid))
---
 Zellij (test)  Tab #1 [ ] Tab #2  + 
 [ MY FOCUS ]              Pane #1                         │ [ FOCUSED USER:   ]       Pane #2
$ oneone█                                                  │$ threethree
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
