zellij-integration-tests/tests/snapshots/clients__multiple_users_in_different_panes_and_same_tab.snap
---
source: zellij-integration-tests/tests/clients.rs
expression: normalized(&main_grid)
---
 Zellij (test)  Tab #1 [ ] + 
 [ MY FOCUS ]              Pane #1                         │ [ FOCUSED USER:   ]       Pane #2
$ █                                                        │$
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
