zellij-integration-tests/tests/snapshots/clients__multiple_users_in_different_tabs-2.snap
---
source: zellij-integration-tests/tests/clients.rs
expression: normalized(&second_grid)
---
 Zellij (test)  Tab #1 [ ] Tab #2  + 
$ █
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
